--- a/www/views/about/about.html
+++ b/www/views/about/about.html
@@ -1,5 +1,63 @@
 <ion-view view-title="About">
     <ion-content>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc condimentum sapien eros, ac ultrices tellus efficitur ac. Donec tincidunt ante eu massa varius posuere. Donec volutpat risus id iaculis pellentesque. Vestibulum malesuada tristique odio, nec consectetur orci semper non. Donec convallis, ipsum vitae accumsan placerat, nibh enim lobortis dolor, at condimentum quam lacus at tellus. Maecenas elit augue, condimentum sed laoreet non, tincidunt ac enim. Proin faucibus vel justo et maximus. Aenean lobortis tincidunt diam in semper. Aenean ullamcorper sit amet turpis at interdum. Vivamus bibendum imperdiet lacus et efficitur. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    <p>
+       While you’re moving throughout the city, WiFind will be collecting some information about your location and phone in order to help out our researchers. To do that, we’ll need to collect some data about your movements and device while you’re moving throughout the city. You can turn the collection off at any point by tapping the “Enable Scanning” button.
+	</p>
+	<p>
+		The app works in the background by scanning for Wi-Fi networks in your area as you move throughout the city. It measures signal strengths for  all of the networks by their service set identifier (SSID), or the name you see when you try to connect. 
+	</p>
+	<p>
+		Once you connect to Wi-Fi, the app uploads the data you’ve collected and can then be seen on the map located on the WiFind website. We didn’t want to use up your mobile data plan, so the app will never upload what you’ve collected until you’re connected to Wi-Fi. 
+	</p>
+
+	<p>
+		We will be collecting some data about your phone while you’re mapping Wi-Fi signals, but don’t worry; it’s all in the name of science! We take your privacy very seriously and have done our best to ensure your data is safe. The data we collect falls into three categories: Location, Network, and Device.
+
+		<!DOCTYPE html>
+		<html>
+			<head>
+				<style>thead
+				table,th,td
+				{border:1px solid black;}
+				</style>
+			</head>
+
+		<body>
+			<table border="1" style="width:300px">
+				<thead>
+					<tr>
+						<th>Location</th>
+						<th>Network</th>
+						<th>Device</th>
+						</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Longitude and Latitude</td>
+						<td>SSID</td>
+						<td>Device MAC Address</td>
+					</tr>
+					<tr>
+						<td>Elevation</td>
+						<td>BSSID</td>
+						<td>App Version</td>
+					</tr>
+					<tr>
+						<td>GPS Accuracy</td>
+						<td>Level</td>
+						<td>Android Version</td>
+					</tr>
+				<tbody>
+					<tfoot>
+						<tr>
+							<td>Time</td>
+							<td>Frequency</td>
+							<td>Device Model</td>
+						</tr>
+					</tfoot>
+				</table>
+			</body>
+		</html>
+
     </ion-content>
 </ion-view>
