--- a/www/views/about/about.html
+++ b/www/views/about/about.html
@@ -1,63 +1,50 @@
 <ion-view view-title="About">
     <ion-content>
-    <p>
-       While you’re moving throughout the city, WiFind will be collecting some information about your location and phone in order to help out our researchers. To do that, we’ll need to collect some data about your movements and device while you’re moving throughout the city. You can turn the collection off at any point by tapping the “Enable Scanning” button.
-	</p>
-	<p>
-		The app works in the background by scanning for Wi-Fi networks in your area as you move throughout the city. It measures signal strengths for  all of the networks by their service set identifier (SSID), or the name you see when you try to connect. 
-	</p>
-	<p>
-		Once you connect to Wi-Fi, the app uploads the data you’ve collected and can then be seen on the map located on the WiFind website. We didn’t want to use up your mobile data plan, so the app will never upload what you’ve collected until you’re connected to Wi-Fi. 
-	</p>
+    <html>
+	    <p>
+	       While you’re moving throughout the city, WiFind will be collecting some information about your location and phone in order to help out our researchers. To do that, we’ll need to collect some data about your movements and device while you’re moving throughout the city. You can turn the collection off at any point by tapping the “Enable Scanning” button.
+		</p>
+		<p>
+			The app works in the background by scanning for Wi-Fi networks in your area as you move throughout the city. It measures signal strengths for  all of the networks by their service set identifier (SSID), or the name you see when you try to connect. 
+		</p>
+		<p>
+			Once you connect to Wi-Fi, the app uploads the data you’ve collected and can then be seen on the map located on the WiFind website. We didn’t want to use up your mobile data plan, so the app will never upload what you’ve collected until you’re connected to Wi-Fi. 
+		</p>
 
-	<p>
-		We will be collecting some data about your phone while you’re mapping Wi-Fi signals, but don’t worry; it’s all in the name of science! We take your privacy very seriously and have done our best to ensure your data is safe. The data we collect falls into three categories: Location, Network, and Device.
+		<p>
+			We will be collecting some data about your phone while you’re mapping Wi-Fi signals, but don’t worry; it’s all in the name of science! We take your privacy very seriously and have done our best to ensure your data is safe. The data we collect falls into three categories: Location, Network, and Device.
 
-		<!DOCTYPE html>
-		<html>
-			<head>
-				<style>thead
-				table,th,td
-				{border:1px solid black;}
-				</style>
-			</head>
+		<p>
+			<p><b>FAQ</b></p>
 
-		<body>
-			<table border="1" style="width:300px">
-				<thead>
-					<tr>
-						<th>Location</th>
-						<th>Network</th>
-						<th>Device</th>
-						</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Longitude and Latitude</td>
-						<td>SSID</td>
-						<td>Device MAC Address</td>
-					</tr>
-					<tr>
-						<td>Elevation</td>
-						<td>BSSID</td>
-						<td>App Version</td>
-					</tr>
-					<tr>
-						<td>GPS Accuracy</td>
-						<td>Level</td>
-						<td>Android Version</td>
-					</tr>
-				<tbody>
-					<tfoot>
-						<tr>
-							<td>Time</td>
-							<td>Frequency</td>
-							<td>Device Model</td>
-						</tr>
-					</tfoot>
-				</table>
-			</body>
+			<P><b>What does the app do?</b>
+
+			<p>
+				WiFind scans for Wi-Fi signals as you move throughout the city. Once you switch it on, it scans for Wi-Fi networks in your area and uploads those data to our server. You can view where you’ve been and the signals around you on our website.
+			</p>
+
+			<p>
+				<b>Which devices can run the app?</b>
+			</p>
+
+			<p>
+				WiFind can run on any recent version of the Android operating system and works with most phones. Sorry, iOS users! Talk to Tim about that one.
+			</p>
+
+			<p><b>Will the app use up my monthly data plan?</b></p>
+
+			<p>
+				No! WiFind only uploads the data you’ve collected when you have connected to a Wi-Fi network.
+			</p> 
+
+			<p>
+				<b>What does the app collect?</b>
+			</p>
+
+			<p>	
+				WiFind collects data that fall within three distinct groups: Location, Network, and Device. These features help us understand the locations of strong Wi-Fi presence and which devices are using the app (this helps us make improvements). All of the raw data are stored on our server and are never shared outside of NYU CUSP.
+			</p>
 		</html>
 
-    </ion-content>
-</ion-view>
+		
+					
